@@ -7,24 +7,21 @@ import com.example.econavi.common.service.FileStorageService;
 import com.example.econavi.member.entity.Member;
 import com.example.econavi.member.repository.MemberRepository;
 import com.example.econavi.member.type.Role;
+import com.example.econavi.photo.entity.PlacePhoto;
+import com.example.econavi.photo.repository.PlacePhotoRepository;
 import com.example.econavi.place.dto.AddPlaceRequestDto;
 import com.example.econavi.place.dto.PlaceDto;
-import com.example.econavi.place.dto.PlacePhotoDto;
 import com.example.econavi.place.entity.Place;
-import com.example.econavi.place.entity.PlacePhoto;
-import com.example.econavi.place.repository.PlacePhotoRepository;
 import com.example.econavi.place.repository.PlaceRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.multipart.MultipartFile;
 
-import java.io.IOException;
 import java.math.BigDecimal;
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -42,36 +39,14 @@ public class PlaceService {
         List<Place> places = placeRepository.findByIdGreaterThanOrderByIdAsc(
                 cursor, PageRequest.of(0, pageSize));
 
-        List<PlaceDto> placeDtos = new ArrayList<>();
-        for (Place place : places) {
-            List<PlacePhoto> placePhotos = placePhotoRepository.findByPlace(place);
-            placeDtos.add(
-                    PlaceDto.fromEntity(
-                            place,
-                            placePhotos.stream().map(PlacePhotoDto::fromEntity).toList()
-                    )
-            );
-        }
-
-        return placeDtos;
+        return places.stream().map(PlaceDto::fromEntity).toList();
     }
 
     @Transactional(readOnly = true)
     public List<PlaceDto> searchPlaces(String keyword) {
         List<Place> places = placeRepository.findByNameContaining(keyword);
 
-        List<PlaceDto> placeDtos = new ArrayList<>();
-        for (Place place : places) {
-            List<PlacePhoto> placePhotos = placePhotoRepository.findByPlace(place);
-            placeDtos.add(
-                    PlaceDto.fromEntity(
-                            place,
-                            placePhotos.stream().map(PlacePhotoDto::fromEntity).toList()
-                    )
-            );
-        }
-
-        return placeDtos;
+        return places.stream().map(PlaceDto::fromEntity).collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
@@ -82,23 +57,12 @@ public class PlaceService {
                 distance
         );
 
-        List<PlaceDto> placeDtos = new ArrayList<>();
-        for (Place place : places) {
-            List<PlacePhoto> placePhotos = placePhotoRepository.findByPlace(place);
-            placeDtos.add(
-                    PlaceDto.fromEntity(
-                            place,
-                            placePhotos.stream().map(PlacePhotoDto::fromEntity).toList()
-                    )
-            );
-        }
-
-        return placeDtos;
+        return places.stream().map(PlaceDto::fromEntity).toList();
     }
 
     @Transactional
     @PreAuthorize("@memberAccessHandler.ownershipCheck(#memberId)")
-    public PlaceDto addPlace(Long memberId, AddPlaceRequestDto request, List<MultipartFile> images) {
+    public PlaceDto addPlace(Long memberId, AddPlaceRequestDto request) {
         Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new ApiException(AuthResponseCode.MEMBER_NOT_FOUND));
 
@@ -126,25 +90,7 @@ public class PlaceService {
 
         place = placeRepository.save(place);
 
-        List<PlacePhoto> placePhotos = new ArrayList<>();
-        if (images != null && !images.isEmpty()) {
-            for (MultipartFile image : images) {
-                try {
-                    String url = fileStorageService.store(image);
-                    PlacePhoto placePhoto = PlacePhoto.builder()
-                            .photoUrl(url)
-                            .place(place)
-                            .build();
-                    placePhotos.add(placePhoto);
-                } catch (IOException e) {
-                    throw new ApiException(GeneralResponseCode.INTERNAL_SERVER_ERROR);
-                }
-            }
-
-            placePhotoRepository.saveAll(placePhotos);
-        }
-
-        return PlaceDto.fromEntity(place, placePhotos.stream().map(PlacePhotoDto::fromEntity).toList());
+        return PlaceDto.fromEntity(place);
     }
 
     @Transactional
@@ -169,9 +115,7 @@ public class PlaceService {
         place.setEndDate(request.getEndDate());
         place = placeRepository.save(place);
 
-        List<PlacePhoto> placePhotos = placePhotoRepository.findByPlace(place);
-
-        return PlaceDto.fromEntity(place, placePhotos.stream().map(PlacePhotoDto::fromEntity).toList());
+        return PlaceDto.fromEntity(place);
     }
 
     @Transactional
@@ -188,6 +132,6 @@ public class PlaceService {
             fileStorageService.delete(photo.getPhotoUrl());
         }
 
-        return PlaceDto.fromEntity(place, List.of());
+        return PlaceDto.fromEntity(place);
     }
 }
